--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-imutils
-numpy
-opencv-python-headless
-streamlit
-pinecone-client
-tensorflow_hub
-tensorflow
-bs4
-tensorrt
-nvidia-pyindex
-nvidia-tensorrt
+imutils==0.5.4
+numpy==1.24.3
+opencv-python-headless==4.8.0.74
+streamlit==1.25.0
+pinecone-client==2.2.2
+tensorflow-hub==0.14.0
+tensorflow==2.13.0
+bs4==0.0.1
